feat(backend): cache downloads and dependencies